# achronyme

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  composer.json  package-lock.json  package.json  serve.bat  tsconfig.json  vite.config.js
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: project-board-automation.yml
app/Helper/: MathHelper.php
app/Http/Controllers/: HomeController.php  ToolController.php
app/Http/Controllers/Auth/: AuthenticatedSessionController.php  ConfirmablePasswordController.php  EmailVerificationPromptController.php  NewPasswordController.php  PasswordResetLinkController.php  RegisteredUserController.php
app/Livewire/: FourierSeries.php  FourierSeriesTool.php
app/Models/: User.php
app/View/Components/: AppLayout.php
config/: services.php
database/migrations/: 2025_09_27_182104_create_asset_models_tables.php
docs/: 01-manifest.md  02-design-system.md  03-database-schema.md  04-user-stories.md  05-wasm-architecture.md  MATHEMATICA_FEATURE_COMPLETE.md  WASM_ROADMAP.md  craft-ui.md
docs/language-spec/: INDEX.md  README.md  SUMMARY.md
docs/language-spec/examples/: 07-composition.md
docs/language-spec/grammar/: 01-lexical.md  02-syntax.md  03-precedence.md
docs/language-spec/semantics/: 02-composition.md
docs/language-spec/types/: 01-primitive-types.md
docs/sprints/: 01-wasm-foundation.md
docs/workflow/: 02-branch-protection.md
lang/: es.json
resources/css/: app.css
resources/js/: app.js
resources/js/agents/: BFSVisualization.ts  DFSVisualization.ts  GraphVisualization.ts  Grid.ts  GridRenderer.ts  MathematicalFormulation.ts  agent-state.ts  app.ts  types.ts
resources/js/convolution/: app.ts  calculations.ts  convolution-state.ts
resources/js/fs/: app.js  app.ts  fourier-state.ts  fourier.ts  validation.ts
resources/js/ft/: app.ts  calculations.ts  fourier-transform-state.ts
resources/js/utils/: numerical-integration.ts  validation.ts
resources/views/: dashboard.blade.php  welcome.blade.php
resources/views/auth/: confirm-password.blade.php  forgot-password.blade.php  login.blade.php  register.blade.php  reset-password.blade.php  verify-email.blade.php
resources/views/components/: background-blur.blade.php  breadcrumbs.blade.php  input-error.blade.php  primary-button.blade.php  secondary-button.blade.php  tabbed-tool.blade.php  text-input.blade.php  three-column-tool.blade.php  tool-header.blade.php  tool-layout.blade.php
resources/views/components/app-ui/: button-group.blade.php  button.blade.php  checkbox-list.blade.php  checkbox.blade.php  circular-button.blade.php  danger-button.blade.php  danger-circular-button.blade.php  doble-input-addon.blade.php  function-domain.blade.php  input-addon.blade.php  input-text.blade.php  loading-spinner.blade.php  radio-list.blade.php  secondary-button.blade.php  secondary-circular-button.blade.php  slider.blade.php
resources/views/components/comand/: comand.blade.php
resources/views/components/image/: logo.blade.php
resources/views/components/partials/: icon-command.blade.php  navigation.blade.php  svg.blade.php
resources/views/components/partials/home/: tool-card.blade.php  tools-grid.blade.php
resources/views/components/partials/layout/: footer.blade.php
resources/views/fs/: index.blade.php
resources/views/ft/: index.blade.php
resources/views/layouts/: app.blade.php  guest.blade.php
resources/views/livewire/: fourier-series-tool.blade.php
resources/views/tools/agents/: index.blade.php
resources/views/tools/agents/partials/: tab-0-environment.blade.php  tab-1-graph.blade.php  tab-2-bfs.blade.php  tab-3-dfs.blade.php
resources/views/tools/convolution/: convolution-content.blade.php  index.blade.php
resources/views/tools/fourier/fs/: fourier-series.blade.php  index.blade.php
resources/views/tools/fourier/ft/: fourier-transform.blade.php  index.blade.php
routes/: web.php
scripts/: build-wasm.sh
wasm/: CMakeLists.txt  README.md
